Blender 2.70 triangulation modifier creates zero-area faces #39685

Closed
opened 2014-04-11 21:25:59 +02:00 by David Rodriguez · 9 comments

System Information
Mac OS 10.9.2
NVIDIA GeForce GT 750M 2048 MB

Blender Version
Broken: 2.70 Date: 03-19-2014
Worked: 2.69 r60991

Short description of error
Triangulation modifier now creates zero-area faces where it did not before.

Exact steps for others to reproduce the error
Blend file is attached with small sample of original mesh. The mesh was originally all triangles and then some edges were split (some multiple times) creating several n-gons with collinear points. When CMD-T is applied, zero area faces are created by Blender 2.70 that are not created by Blender 2.69. Blend file, before image, and after images from the two versions of Blender are attached. Note this error could not be recreated with the cube object.

bad_ngon_Triangulation.blend

original_mesh.png
Blender2.69_triangulation.png
Blender2.70_triangulation.png

**System Information** Mac OS 10.9.2 NVIDIA GeForce GT 750M 2048 MB **Blender Version** Broken: 2.70 Date: 03-19-2014 Worked: 2.69 r60991 **Short description of error** Triangulation modifier now creates zero-area faces where it did not before. **Exact steps for others to reproduce the error** Blend file is attached with small sample of original mesh. The mesh was originally all triangles and then some edges were split (some multiple times) creating several n-gons with collinear points. When CMD-T is applied, zero area faces are created by Blender 2.70 that are not created by Blender 2.69. Blend file, before image, and after images from the two versions of Blender are attached. Note this error could not be recreated with the cube object. [bad_ngon_Triangulation.blend](https://archive.blender.org/developer/F84559/bad_ngon_Triangulation.blend) ![original_mesh.png](https://archive.blender.org/developer/F84554/original_mesh.png) ![Blender2.69_triangulation.png](https://archive.blender.org/developer/F84550/Blender2.69_triangulation.png) ![Blender2.70_triangulation.png](https://archive.blender.org/developer/F84552/Blender2.70_triangulation.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @dlrodriguez

Added subscriber: @dlrodriguez

Added subscribers: @ideasman42, @ThomasDinges

Added subscribers: @ideasman42, @ThomasDinges

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Sergey Sharybin 2014-04-14 10:16:42 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by blender/blender-addons-contrib@5c4bb81e49

This issue was referenced by blender/blender-addons-contrib@5c4bb81e49fa075373f0da5a19f2291043b71f54

This issue was referenced by 5c4bb81e49

This issue was referenced by 5c4bb81e49fa075373f0da5a19f2291043b71f54

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5c4bb81e49.

Closed by commit 5c4bb81e49.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39685
No description provided.