Fix T39685: triangulation modifier creates zero-area faces